# Transactalyze

./: .replit  Dockerfile  a.txt  a.txt.pub  main.py  pyproject.toml  render.yaml  requirements.txt  test_api.py
app/: __init__.py  auth.py  categorizer.py  extractors.py  models.py  routes.py  utils.py
app/parsers/: fallback_text_parser.py  regex_utils.py
static/: sample.csv  sample_categorized.csv
templates/: about.html  feedback.html  index.html  login.html  privacy.html  signup.html
