[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "flask==3.1.0",
    "openai==1.57.0",
    "pandas==2.2.3",
    "pdf2image>=1.17.0",
    "pdfplumber>=0.11.6",
    "pymupdf==1.25.0",
    "pytesseract==0.3.13",
    "python-dotenv==1.0.1",
    "werkzeug>=3.1.3",
]
